Fix horizontal overflow in gallery

--- a/src/app/components/about/about.css
+++ b/src/app/components/about/about.css
@@ -29,7 +29,7 @@
     border-radius: 5px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1600px) {
     .gallery {
         overflow: visible;
         justify-content: space-between;
